# dp_plain_python

./: .gitignore  Dockerfile  README.md  config.ini  config_aws.ini  pyproject.toml
.github/workflows/: build-deploy.yml
dp_plain_python/: api.py  run_all.py
dp_plain_python/analytics/: run_analytics.py
dp_plain_python/environment/: config.py  file_storage.py  file_storage_test.py
dp_plain_python/extract/: geolocation.py  run_extract.py
dp_plain_python/load/: run_load.py
dp_plain_python/transform/: clean_address.py  clean_malls.py  clean_mrt_stations.py  clean_resale_prices.py  run_analytics_transform.py
dp_plain_python/utils/: coalesce_columns.py  select_columns.py
