[tool.poetry]
name = "dp-plain-python"
version = "0.1.0"
description = ""
authors = ["Yacine Mekesser"]
readme = "README.md"
packages = [{include = "dp_plain_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
pytest = "^7.3.1"
openpyxl = "^3.1.2"
requests = "^2.30.0"
pyarrow = "^12.0.0"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-all = "dp_plain_python.run_all:main"